# laboratory-work-03-kapavkin

./: CMakeLists.txt  main.cpp
array/: CMakeLists.txt  array.cpp  array.h
array/stack/: CMakeLists.txt  stack.cpp  stack.h
list/: CMakeLists.txt  list.cpp  list.h
queue/: CMakeLists.txt  queue.cpp  queue.h
report/: report.tex
tree/: CMakeLists.txt  tree.cpp  tree.h
